src/tests/snapshots/wiegenfest__tests__ir__call_when_names_not_in_order.snap
---
source: src/tests/ir.rs
expression: ir

---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
main:
  %a = alloca i64
  store i64 1, i64* %a
  %a1 = load i64, i64* %a
  %f = call i64 @f(i64 %a1)
  ret i64 %f
}

define i64 @f(i64 %0) {
f:
  %a = alloca i64
  store i64 %0, i64* %a
  %a1 = load i64, i64* %a
  ret i64 %a1
}

