src/tests/snapshots/wiegenfest__tests__ir__mixed_guards.snap
---
source: src/tests/ir.rs
expression: ir

---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
main:
  br i64 1, label %"0", label %"1"

"0":                                              ; preds = %main
  %a = alloca i64
  store i64 2, i64* %a
  br label %"1"

"1":                                              ; preds = %"0", %main

"2":                                              ; No predecessors!
  ret i64 3
}

