src/tests/snapshots/wiegenfest__tests__ir__multiple_addition.snap
---
source: src/tests/ir.rs
expression: ir

---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
main:
  ret i64 6
}

