src/tests/snapshots/wiegenfest__tests__ir__return.snap
---
source: src/tests/ir.rs
expression: IR

---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
main:
  ret i64 1
}

